--- a/SolarWatchClient/solar-watch-vite/src/index.css
+++ b/SolarWatchClient/solar-watch-vite/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #ffffffe6;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #e39a9aae;
 }
 
 body {
@@ -65,4 +65,34 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.register {
+  width: 200px;
+  display: flexbox;
+  justify-content: center;
+  align-items: center;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.register>button {
+  margin-top: 10px;
+  width: 100px;
+  margin-left: 30px;
+}
+
+.login {
+  width: 200px;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.login>button {
+  margin-top: 10px;
+  width: 100px;
+  margin-left: 30px;
 }
