--- a/SolarWatchClient/solar-watch-vite/src/index.css
+++ b/SolarWatchClient/solar-watch-vite/src/index.css
@@ -67,9 +67,20 @@ button:focus-visible {
   }
 }
 
+.register-container {
+  position: absolute;
+  width: 300px;
+  height: 200px;
+  z-index: 15;
+  top: 50%;
+  left: 50%;
+  margin: -100px 0 0 -150px;
+}
+
 .register {
   width: 200px;
-  display: flexbox;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-right: auto;
@@ -79,12 +90,22 @@ button:focus-visible {
 .register>button {
   margin-top: 10px;
   width: 100px;
-  margin-left: 30px;
+}
+
+.login-container {
+  position: absolute;
+  width: 300px;
+  height: 200px;
+  z-index: 15;
+  top: 50%;
+  left: 50%;
+  margin: -100px 0 0 -150px;
 }
 
 .login {
   width: 200px;
-  display: block;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-right: auto;
@@ -94,5 +115,14 @@ button:focus-visible {
 .login>button {
   margin-top: 10px;
   width: 100px;
-  margin-left: 30px;
+}
+
+.home-page {
+  display: flex;
+  justify-content: center;
+}
+
+.home {
+  width: 400px; 
+  align-items: center;
 }
